estructura base HTML

--- a/index.html
+++ b/index.html
@@ -4,8 +4,55 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Antonia Mercé</title>
+
+      <!-- ENLACE CSS -->
+      <link rel="stylesheet" href="css/style.css">
   </head>
+
+
   <body>
-      <h1>Antonia Mercé</h1>
+      <header>
+        <h1>ANTONIA MERCÉ</h1>
+        <h2>TEATRO DE LA ZARZUELA 28 · 30 NOV </h2>
+
+        <img src="#" alt="Antonia Mercé" class="AMprincipal">
+
+        <img src="#" alt="Separador" class="separador">
+      </header>
+
+      <main>
+        <!-- ENTRADAS -->
+        <section id="entradas">
+          <div class="cards-container">
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+          </div>
+
+          <a href="#" class="btn">Entradas</a>
+        </section>
+
+
+        <!-- VIDEO -->
+        <section id="video">
+          <p>"La danza me transfigura, me agiganta. No soy yo la que baila, Es mi tierra bravia, febril y atormentada, el alma toda de mi tierra, mistica y pasional, la que gira, se contorsiona y desfallece en los tablados."</p>
+
+          <source src="#" type="video/mp4">
+        </section>
+
+
+        <!-- INFORMACIÓN -->
+        <section id="info">
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam maiores magnam amet beatae vero nihil reiciendis tempore iste repudiandae commodi soluta</p>
+
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam maiores magnam amet beatae vero nihil reiciendis tempore iste repudiandae commodi soluta</p>
+
+          <a href="#" class="btn">Ver más</a>
+        </section>
+
+
+        <!-- FOOTER -->
+        <footer></footer>
+      </main>
   </body>
 </html>
