header html + css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <img src="#" alt="Antonia Mercé" class="AMprincipal">
 
-        <img src="#" alt="Separador" class="separador">
+        <img src="img/separador.png" alt="Separador" class="separador">
       </header>
 
       <main>
