--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Antonia Mercé</title>
-
-      <!-- ENLACE CSS -->
-      <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Antonia Mercé</title>
+    
+    <!-- ENLACE TIPOGRAFÍA -->
+    <link rel="stylesheet" href="https://use.typekit.net/ixf8kss.css">
+    <link rel="stylesheet" href="https://use.typekit.net/ixf8kss.css">
+    
+    <!-- ENLACE CSS -->
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
 
@@ -15,7 +19,7 @@
         <h1>ANTONIA MERCÉ</h1>
         <h2>TEATRO DE LA ZARZUELA 28 · 30 NOV </h2>
 
-        <img src="#" alt="Antonia Mercé" class="AMprincipal">
+        <img src="img/Antonia Mercé.png" alt="Antonia Mercé" class="AMprincipal">
 
         <img src="img/separador.png" alt="Separador" class="separador">
       </header>
